debut projet todo

--- a/Starter/index.html
+++ b/Starter/index.html
@@ -6,10 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercice Js</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/89fe9bcfac.js" crossorigin="anonymous"></script>
+
 </head>
 
 <body>
 
+    <h1>Poject starter</h1>
+
+
+    <h2>hello</h2>
+    <h2>hello</h2>
+    <script src="script.js"></script>
 </body>
 
 </html>
