--- a/Todos_list/index.html
+++ b/Todos_list/index.html
@@ -24,7 +24,10 @@
         autocomplete="off"
       />
 
-      <ul class="todos" id="todos"></ul>
+      <ul class="todos" id="todos">
+        <li>my first todo</li>
+        <li>My second todo</li>
+      </ul>
     </form>
 
     <small
